fixed z-index

--- a/src/modules/commons/components/searchableSelect/searchableSelect.css
+++ b/src/modules/commons/components/searchableSelect/searchableSelect.css
@@ -46,5 +46,6 @@
 
 .dropdown {
 	position: absolute;
+	z-index: var(--z-mapbuttons);
 	width: 100%;
 }
